# specra-app

./: README.md  index.html  package-lock.json  package.json  pnpm-lock.yaml  tsconfig.json  vite.config.ts
src/: App.svelte  App.tsx  globals.css  main.ts  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: archive.rs  auth.rs  deploy.rs  lib.rs  main.rs
src/features/auth/components/: LoginPage.svelte  LoginPage.tsx  TokenInput.svelte  TokenInput.tsx  UserMenu.svelte  UserMenu.tsx
src/features/auth/store/: auth-store.ts
src/features/collaboration/components/: InviteMemberDialog.svelte  InviteMemberDialog.tsx  MembersList.svelte  MembersList.tsx  OrgDetail.svelte  OrgDetail.tsx  OrganizationsPage.svelte  OrganizationsPage.tsx
src/features/documents/components/: DocumentTree.svelte  DocumentTree.tsx  DocumentTreeItem.svelte
src/features/documents/store/: document-store.ts
src/features/editor/blocks/: CalloutBlock.tsx  CardBlock.tsx  CardGridBlock.tsx  StepsBlock.tsx  TabGroupBlock.tsx
src/features/editor/components/: DocumentMetadataPanel.svelte  (+3 more)
src/layouts/: ActivityBar.svelte  ActivityBar.tsx  AppLayout.svelte  AppLayout.tsx  Sidebar.svelte  Sidebar.tsx
src/lib/: Router.svelte  router.ts
src/lib/api/: client.ts  organizations.ts  projects.ts  types.ts
src/lib/tauri/: auth.ts  database.ts
src/shared/components/: CommandPalette.svelte  CommandPalette.tsx
src/shared/hooks/: debounce.ts  keyboard-shortcuts.ts  useDebounce.ts  useKeyboardShortcuts.ts
src/shared/store/: ui-store.ts
(+29 files in other folders)
