[package]
name = "specra-app"
version = "0.1.0"
description = "Specra - Desktop Writing & Publishing Tool"
authors = ["you"]
edition = "2021"

[lib]
name = "specra_app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
tauri-plugin-sql = { version = "2", features = ["sqlite"] }
tauri-plugin-http = "2"
tauri-plugin-fs = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
flate2 = "1"
tar = "0.4"
reqwest = { version = "0.12", default-features = false, features = ["multipart", "stream", "rustls-tls"] }
tokio = { version = "1", features = ["full"] }
sha2 = "0.10"
rand = "0.8"
